--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
   
   /* Hero Section */
   .hero {
-    background-image: url('https://github.com/NicklasPhoenix/Unrau/blob/a139a3c47dc837d79f743b328bd9bd39d591d81b/1.png');
+    background-image: url('1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
